Added some tests

--- a/NumberTheory/NumberTheory.vcxproj
+++ b/NumberTheory/NumberTheory.vcxproj
@@ -118,6 +118,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="Factorization.h" />
     <ClInclude Include="ModularArithmetic.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
