--- a/NumberTheory/NumberTheory.vcxproj.filters
+++ b/NumberTheory/NumberTheory.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClInclude Include="ModularArithmetic.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Factorization.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
