--- a/NumberTheoryTests/NumberTheoryTests.vcxproj.filters
+++ b/NumberTheoryTests/NumberTheoryTests.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="ModularArithmeticTests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FactorizationTests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
