Multiple changes: 1) Fixed a bug in IsPrime when it would always return false for large prime numbers. 2) Changed division for IntegerModulo to throw exception when division is impossible 3) Implemented a function to find a primitive root of Z_p group.

--- a/NumberTheory/NumberTheory.vcxproj.filters
+++ b/NumberTheory/NumberTheory.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClInclude Include="Factorization.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="DiscreetLogarithm.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
