--- a/NumberTheoryTests/NumberTheoryTests.vcxproj.filters
+++ b/NumberTheoryTests/NumberTheoryTests.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="FactorizationTests.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="DiscreetLogarithmTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
