--- a/NumberTheoryTests/NumberTheoryTests.vcxproj.filters
+++ b/NumberTheoryTests/NumberTheoryTests.vcxproj.filters
@@ -24,5 +24,8 @@
     <ClCompile Include="DiscreetLogarithmTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="BigIntegerTest.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
