--- a/CppMagic/CppMagic.vcxproj.filters
+++ b/CppMagic/CppMagic.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClInclude Include="Zip.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="OptimizationPragmas.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
