--- a/NumberTheoryTests/NumberTheoryTests.vcxproj.filters
+++ b/NumberTheoryTests/NumberTheoryTests.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClCompile Include="BigIntegerTest.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="FftTests.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
