--- a/NumberTheory/NumberTheory.vcxproj.filters
+++ b/NumberTheory/NumberTheory.vcxproj.filters
@@ -27,5 +27,8 @@
     <ClInclude Include="BigInteger.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="FFT.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
